2008-02-16  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* jhbuild/modtypes/waf.py:
	Bug 513925 – honor lib64 option in waf modules.

2008-02-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/tarball.py: raise BuildStateError when
	downloading patch fails.

2008-02-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/tarball.py: added missing import.
	(closes: #513830)

2008-02-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py: added ssh:// url support.
	(closes: #515495)

2008-02-15  Jaap Haitsma  <jaap@haitsma.org>

	* modulesets/gnome-2.22.modules: Add netspeed applet

2008-02-10  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* modulesets/bootstrap.modules: Update WAF to version 1.3.2; fixes
	lots of bugs, including a lib64 bug with installation of python
	modules (see #513925).  Also change WAF download server to
	http://freehackers.org/~tnagy, as google project downloads are
	kind of erratic and failing most of the time.

2008-02-13  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.22.modules: Metacity has
	branched for gnome-2-22.

2008-02-13  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.22.modules:
	Added libsoup-2.2, gst-fluendo-mpegdemux, gst-fluendo-mp3,
	gst-plugins-gl (previously in -bad).

	Removed gio-standalone (now in glib).

	Reworked rhythmbox deps, adding missing and moving others
	to <suggests>.

2008-02-12  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-external-deps-2.22.modules:
	* patches/libvolume_id_Makefile.patch:
	hal 0.5.10 requires udev >= 111.

2008-02-12  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-external-deps-2.22.modules:
	Bump hal version to 0.5.10.

2008-02-11  Olav Vitters  <olav@bkor.dhs.org>

	* modulesets/gnome-suites-2.22.modules: Remove gnome-vfs dependency
	from vinagre, gnome-panel, gdm.

2008-02-10  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.22.modules: bump gtk-vnc 