@@ -1,3 +1,8 @@
+2008-02-17  John Carr <john.carr@unrouted.co.uk>
+
+	* jhbuild/modtypes/cmake.py:
+	Honor the --dist option. (closes: #514131)
+
 2008-02-16  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
 
 	* jhbuild/modtypes/waf.py:
